test/typechecker.d/invalid/if.souc.bad
f(x: Integer): Integer = fndo
	if "what, a string?"
		return 3
	return 3
